# kv-store

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: architecture.md  cpp-guidelines.md  raft-spec.md
proto/: raft.proto
scripts/: run_cluster.sh
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  logger.cpp  logger.hpp  node_config.cpp  node_config.hpp
src/network/: CMakeLists.txt  binary_protocol.cpp  binary_protocol.hpp  peer_client.cpp  peer_client.hpp  peer_manager.cpp  peer_manager.hpp  protocol.cpp  protocol.hpp  resp_protocol.cpp  resp_protocol.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/persistence/: CMakeLists.txt  snapshot.cpp  snapshot.hpp  snapshot_io_impl.cpp  snapshot_io_impl.hpp  wal.cpp  wal.hpp  wal_persist_callback.cpp  wal_persist_callback.hpp
src/raft/: CMakeLists.txt  clock.hpp  cluster_config.hpp  commit_awaiter.cpp  commit_awaiter.hpp  raft_cluster_context.cpp  raft_cluster_context.hpp  raft_log.cpp  raft_log.hpp  raft_node.cpp  raft_node.hpp  raft_transport.cpp  raft_transport.hpp  real_timer.cpp  real_timer.hpp  state_machine.cpp  state_machine.hpp
src/server/: CMakeLists.txt  main.cpp
src/storage/: CMakeLists.txt  rocksdb_storage.cpp  rocksdb_storage.hpp  storage.cpp  storage.hpp  storage_engine.hpp
tests/: CMakeLists.txt  binary_protocol_test.cpp  cluster_config_test.cpp  cluster_integration_test.cpp  integration_test.cpp  node_config_test.cpp  peer_client_test.cpp  peer_manager_test.cpp  protocol_test.cpp  raft_test.cpp  raft_transport_test.cpp  real_timer_test.cpp  redirect_test.cpp  resp_protocol_test.cpp  rocksdb_storage_test.cpp  snapshot_io_impl_test.cpp  snapshot_test.cpp  storage_test.cpp  wal_test.cpp
tools/: CMakeLists.txt  benchmark.cpp
