add_executable(kvstore_tests
    storage_test.cpp
    protocol_test.cpp
    integration_test.cpp
    node_config_test.cpp
    peer_client_test.cpp
    peer_manager_test.cpp
    raft_test.cpp
    redirect_test.cpp
    wal_test.cpp
    snapshot_test.cpp
)
target_link_libraries(kvstore_tests
    PRIVATE
        kvstore_lib
        GTest::gtest
        GTest::gtest_main
        kv_compile_options
)
include(GoogleTest)
gtest_discover_tests(kvstore_tests)
